<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="false"
        android:id="@+id/aboutScrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#ffffffff"
            android:measureWithLargestChild="false">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/about_h_1"
                android:id="@+id/aboutHeader1"
                android:layout_alignParentTop="true"
                android:layout_alignLeft="@+id/aboutScrollView"
                android:layout_alignStart="@+id/aboutScrollView"
                android:textColor="#ff922d8d"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="2dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/about_b_1"
                android:id="@+id/aboutBody1"
                android:layout_alignParentTop="true"
                android:layout_alignLeft="@+id/aboutScrollView"
                android:layout_alignStart="@+id/aboutScrollView"
                android:textColor="#ff222222"
                android:textSize="18dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/about_h_2"
                android:id="@+id/aboutHeader2"
                android:layout_alignParentTop="true"
                android:layout_alignLeft="@+id/aboutScrollView"
                android:layout_alignStart="@+id/aboutScrollView"
                android:textColor="#ff922d8d"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/about_b_2"
                android:id="@+id/aboutBody2"
                android:layout_alignParentTop="true"
                android:layout_alignLeft="@+id/aboutScrollView"
                android:layout_alignStart="@+id/aboutScrollView"
                android:textColor="#ff222222"
                android:textSize="18dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/about_h_3"
                android:id="@+id/aboutHeader3"
                android:layout_alignParentTop="true"
                android:layout_alignLeft="@+id/aboutScrollView"
                android:layout_alignStart="@+id/aboutScrollView"
                android:textColor="#ff922d8d"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/about_b_3"
                android:id="@+id/aboutBody3"
                android:layout_alignParentTop="true"
                android:layout_alignLeft="@+id/aboutScrollView"
                android:layout_alignStart="@+id/aboutScrollView"
                android:textColor="#ff222222"
                android:textSize="18dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/about_h_4"
                android:id="@+id/aboutHeader4"
                android:layout_alignParentTop="true"
                android:layout_alignLeft="@+id/aboutScrollView"
                android:layout_alignStart="@+id/aboutScrollView"
                android:textColor="#ff922d8d"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/about_b_4"
                android:id="@+id/aboutBody4"
                android:layout_alignParentTop="true"
                android:layout_alignLeft="@+id/aboutScrollView"
                android:layout_alignStart="@+id/aboutScrollView"
                android:textColor="#ff222222"
                android:textSize="18dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/about_h_5"
                android:id="@+id/aboutHeader5"
                android:layout_alignParentTop="true"
                android:layout_alignLeft="@+id/aboutScrollView"
                android:layout_alignStart="@+id/aboutScrollView"
                android:textColor="#ff922d8d"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="40dp" />
        </LinearLayout>
    </ScrollView>